--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "jaxon-php/jaxon-blade",
     "type": "library",
-    "description": "Jaxon view renderer for Blade templates",
+    "description": "Jaxon view renderer for the Blade template engine",
     "authors": [
         {"name": "Thierry Feuzeu"}
     ],
@@ -15,6 +15,9 @@
     "require": {
         "jaxon-php/jaxon-sentry": "~2.0",
         "jenssegers/blade": "dev-master"
+    },
+    "provide": {
+        "jaxon-php/jaxon-view-blade": "~2.0"
     },
     "autoload": {
         "psr-4": {
