--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "source": "https://github.com/jaxon-php/jaxon-blade"
     },
     "require": {
-        "jaxon-php/jaxon-sentry": "~2.0",
+        "jaxon-php/jaxon-core": "dev-develop",
         "jenssegers/blade": "~1.1"
     },
     "provide": {
