--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
         "source": "https://github.com/jaxon-php/jaxon-blade"
     },
     "require": {
-        "jaxon-php/jaxon-core": "dev-develop",
-        "jenssegers/blade": "~1.1"
+        "jaxon-php/jaxon-core": "^3.1",
+        "jenssegers/blade": "^1.2"
     },
     "provide": {
-        "jaxon-php/jaxon-view-blade": "~2.0"
+        "jaxon-php/jaxon-view-blade": "~3.0"
     },
     "autoload": {
         "psr-4": {
