--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
         "source": "https://github.com/jaxon-php/jaxon-blade"
     },
     "require": {
-        "jaxon-php/jaxon-core": "^3.1",
-        "jenssegers/blade": "^1.2"
+        "jaxon-php/jaxon-core": "v5.x-dev",
+        "jenssegers/blade": "^1.4|^2.0"
     },
     "provide": {
-        "jaxon-php/jaxon-view-blade": "~3.0"
+        "jaxon-php/jaxon-view-blade": "v5.x-dev"
     },
     "autoload": {
         "psr-4": {
