--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
         "source": "https://github.com/jaxon-php/jaxon-blade"
     },
     "require": {
-        "jaxon-php/jaxon-core": "dev-main",
+        "jaxon-php/jaxon-core": "^5.0",
         "jenssegers/blade": "^1.4|^2.0"
     },
     "provide": {
-        "jaxon-php/jaxon-view-blade": "dev-main"
+        "jaxon-php/jaxon-view-blade": "^5.0"
     },
     "autoload": {
         "psr-4": {
